# EdgeDeviceManage_Slave

./: CMakeLists.txt  README.md
include/: base64.hpp  file.hpp  list.hpp  master.hpp  md5.hpp  msg.hpp  msg_type.hpp  semaphore.hpp  slave.hpp  task.hpp
src/: base64.cpp  file.cpp  list.cpp  main.cpp  md5.cpp  msg.cpp  task.cpp
